--- a/magda-web-client/src/UI/ChartConfig.scss
+++ b/magda-web-client/src/UI/ChartConfig.scss
@@ -7,13 +7,16 @@
             margin-right: 2px;
             border: 1px solid rgba(0, 0, 0, 0);
             padding: 4px;
-            &.isActive,
-            &:hover {
+            &.isActive {
                 border: 1px solid rgba(0, 0, 0, 0.26);
-                background: #4b3081;
+                background: $AU-color-foreground-action;
                 img {
                     filter: grayscale(1) brightness(10);
                 }
+            }
+            &:hover {
+                outline: $AU-colordark-foreground-focus auto 5px;
+                cursor: pointer;
             }
         }
     }
