--- a/magda-web-client/src/Components/Search/SearchBox.scss
+++ b/magda-web-client/src/Components/Search/SearchBox.scss
@@ -3,7 +3,7 @@
 @mixin text() {
     font-size: 1rem;
     border-bottom: 0;
-    padding: 16px 8px;
+    padding: 24px 8px;
     box-sizing: border-box;
     display: block;
     background-color: transparent;
@@ -13,11 +13,11 @@
     box-shadow: none;
     border-radius: 0;
     background-image: none;
+    color: rgba($AU-colordark-foreground-text, 0.87);
     @media (min-width: $medium) {
         padding-bottom: 5px;
         padding-left: 0;
         margin-bottom: 0;
-        color: rgba($AU-colordark-foreground-text, 0.87);
         display: block;
         padding-top: 15px;
         font-family: inherit;
@@ -32,22 +32,16 @@
 
 .searchBox-switcher {
     &.none-home {
-        @media (min-width: $medium) {
-            background: $AU-colordark-background;
-        }
+        background: $AU-colordark-background;
+        margin-bottom: 10px;
         .searchBox {
             background-color: transparent;
-            @media (max-width: $medium - 1) {
-                border-bottom: 2px solid rgba($AU-color-foreground-action, 0.5);
-                margin: 10px;
-            }
         }
     }
 }
 
 .searchBox {
     position: relative;
-    color: $AU-color-foreground-action;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -95,7 +89,7 @@
         position: absolute;
         right: 0;
         padding: 8px;
-        bottom: 1px;
+        bottom: 12px;
         border: 2px solid transparent;
         box-sizing: border-box;
         display: inline-block;
@@ -109,13 +103,13 @@
         overflow: visible;
         transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
         background: none;
-        border-bottom: 2px solid rgba(#fff, 0.2);
         img {
             width: 28px;
             height: 28px;
         }
         @media (min-width: $medium) {
             padding: 5px;
+            bottom: 1px;
             img {
                 width: 32px;
                 height: 32px;
