Redo Adam's fix for issue 1155 (the original commit may have been lost during the merge) : `Ask a question about this dataset` button (on dataset page) won't open form on safari browser

--- a/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
@@ -2,7 +2,7 @@
 
 .ask-dataset-form {
     padding: 10px;
-    overflow: -webkit-paged-y;
+    overflow: scroll;
     position: relative;
     float: right;
     width: 800px;
