--- a/magda-web-client/src/Components/Header/Header.scss
+++ b/magda-web-client/src/Components/Header/Header.scss
@@ -145,15 +145,8 @@
         position: absolute;
         width: 100%;
         z-index: 1;
-        li {
-            border-bottom: 1px solid gray;
-            padding-left: 10px;
-        }
-        li:last-child {
-            border-bottom: none;
-        }
         ul {
-            padding-bottom: 0px;
+            padding: 0px;
         }
     }
 
@@ -161,7 +154,34 @@
         background: #fff;
         overflow-y: hidden;
         height: 0;
-        border-bottom: 1px solid rgba(73, 73, 73, 0.15);
+        li {
+            padding: 0;
+            margin: 0;
+            border-bottom: 1px solid #dad9db;
+            a {
+                line-height: 4.5rem;
+                margin: 0;
+                border-left: 10px solid $AU-colordark-background;
+                display: block;
+                padding: 0;
+                padding-left: 16px;
+                color: $AU-colordark-background;
+
+                &,
+                &:hover,
+                &:focus {
+                    text-decoration: none;
+                }
+
+                &.active {
+                    background: #f4f3f5;
+                    font-weight: bold;
+                }
+                span {
+                    border-bottom: 1px solid $AU-color-foreground-action;
+                }
+            }
+        }
         &.isOpen {
             height: auto;
         }
