--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -3,9 +3,9 @@ $AU-color-foreground-focus: #0e0021;
 $AU-color-foreground-text: #0e0021;
 $AU-color-background: #ffffff;
 
-$AU-colordark-foreground-action: #f1f7ee;
+$AU-colordark-foreground-action: #f7f7f7;
 $AU-colordark-foreground-focus: #6b7fd7;
-$AU-colordark-foreground-text: #f1f7ee;
+$AU-colordark-foreground-text: #f7f7f7;
 $AU-colordark-background: #320e3b;
 
 $magda-green: #16a085;
