--- a/magda-web-client/src/Components/Header/Header.scss
+++ b/magda-web-client/src/Components/Header/Header.scss
@@ -114,8 +114,7 @@
             &:hover:before {
                 background-image: AU-svguri(
                     '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000">' +
-                        '<path d="M0 0h24v24H0z" fill="none"/>' +
-                        '<path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>' +
+                        '<path id="path-1" d="M2,8 L2,6 L22,6 L22,8 L2,8 Z M2,18 L2,16 L22,16 L22,18 L2,18 Z"/>' +
                         "</svg>"
                 );
             }
