--- a/magda-web-client/src/UI/TagsBox.scss
+++ b/magda-web-client/src/UI/TagsBox.scss
@@ -6,6 +6,7 @@
         padding-left: 0;
         li {
             padding-right: 8px;
+            padding-left: 0;
             display: inline-block;
             border-radius: 0;
             border: none;
