--- a/magda-web-client/src/UI/ChartConfig.scss
+++ b/magda-web-client/src/UI/ChartConfig.scss
@@ -5,11 +5,13 @@
             background: transparent;
             border: 0;
             box-shadow: 0;
-            margin-right: 2px;
+            margin-right: 8px;
             border: 1px solid rgba(0, 0, 0, 0);
             padding: 4px;
+            border: 2px solid $AU-color-foreground-action;
+            border-radius: 2px;
+            padding: 0.8rem;
             &.isActive {
-                border: 1px solid rgba(0, 0, 0, 0.26);
                 background: $AU-color-foreground-action;
                 img {
                     filter: grayscale(1) brightness(10);
@@ -21,16 +23,16 @@
             }
         }
     }
-    .chart-type {
-        margin-top: 1em;
-    }
-    .chart-title {
-        margin-top: 1em;
-    }
-    .x-axis {
-        margin-top: 1em;
-    }
+    .chart-type,
+    .chart-title,
+    .x-axis,
     .y-axis {
         margin-top: 1em;
+        max-width: 400px;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 0.5rem;
     }
 }
