--- a/magda-web-client/src/UI/DataPreviewVis.scss
+++ b/magda-web-client/src/UI/DataPreviewVis.scss
@@ -11,11 +11,13 @@
     .tab-list {
         li {
             width: 100%;
+            margin: 0;
         }
 
         @media (min-width: $medium) {
             li {
                 width: auto;
+                margin: 0.25rem;
             }
         }
 
