change placeholder color on mobile

--- a/magda-web-client/src/Components/Search/SearchBox.scss
+++ b/magda-web-client/src/Components/Search/SearchBox.scss
@@ -48,18 +48,19 @@
     background-color: rgba($AU-color-foreground-action, 0.8);
     background: $AU-color-background;
     border-radius: 0px;
-
-    input::-webkit-input-placeholder {
-        color: rgba($AU-colordark-foreground-action, 0.8);
-    }
-    input:-moz-placeholder {
-        color: rgba($AU-colordark-foreground-action, 0.8);
-    }
-    input::-moz-placeholder {
-        color: rgba($AU-colordark-foreground-action, 0.8);
-    }
-    input:-ms-input-placeholder {
-        color: rgba($AU-colordark-foreground-action, 0.8);
+    @media (max-width: $medium) {
+        input::-webkit-input-placeholder {
+            color: rgba($AU-colordark-foreground-action, 0.8);
+        }
+        input:-moz-placeholder {
+            color: rgba($AU-colordark-foreground-action, 0.8);
+        }
+        input::-moz-placeholder {
+            color: rgba($AU-colordark-foreground-action, 0.8);
+        }
+        input:-ms-input-placeholder {
+            color: rgba($AU-colordark-foreground-action, 0.8);
+        }
     }
 
     input:focus::-webkit-input-placeholder {
