--- a/magda-web-client/src/UI/DataPreviewChart.scss
+++ b/magda-web-client/src/UI/DataPreviewChart.scss
@@ -4,12 +4,18 @@
     .data-preview-chart-container {
         margin-left: -20px;
     }
+
+    .chart-panel-container {
+        .chart-title {
+            font-weight: bold;
+            margin-bottom: 0;
+        }
+    }
     .config-panel-container {
         margin-top: -10px;
         @media (min-width: $medium) {
             margin-top: 0px;
         }
-        padding-left: 0px !important;
     }
 
     .chart-config {
@@ -23,7 +29,7 @@
             display: block;
         }
     }
-  
+
     .toggle-button {
         color: $AU-color-foreground-action;
         font-size: 1rem;
@@ -39,14 +45,8 @@
             top: -2px;
         }
     }
-  
+
     .toggle-button:focus {
         outline: none;
-    }
-  
-    .chart-title {
-        font-weight: bold;
-        padding: 0 4px;
-        margin-bottom: 0;
     }
 }
