more style updates

--- a/magda-web-client/src/Components/Publisher/PublisherSummary.scss
+++ b/magda-web-client/src/Components/Publisher/PublisherSummary.scss
@@ -27,8 +27,11 @@
     }
 
     .publisher-meta {
-        @include AU-fontgrid(xs);
         color: $AU-color-foreground-action;
+        margin: 0.8rem 0;
+        a {
+            text-decoration: none;
+        }
     }
 
     .publisher-description {
