--- a/magda-web-client/src/Components/Publisher/PublishersViewer.scss
+++ b/magda-web-client/src/Components/Publisher/PublishersViewer.scss
@@ -37,6 +37,7 @@
 
     .result-count {
         text-transform: uppercase;
+        margin-bottom: 8px;
         color: $AU-color-foreground-action;
     }
 
