--- a/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
@@ -22,13 +22,11 @@
 }
 
 .correspondence-dataset-close-button {
-    height: 2em;
-    width: 2em;
     position: absolute;
-    top: 10px;
+    top: 15px;
     right: 10px;
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     &:hover {
         cursor: pointer;
     }
@@ -45,7 +43,10 @@
         overflow-y: auto;
     }
     .suggest-modal-heading {
-        font-size: 17px;
+        font-size: 1rem;
+        padding-right: 30px;
+        text-align: left;
+        padding-left: 8px;
     }
 }
 
