fixed a scroll bar thing on form

--- a/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
@@ -2,7 +2,7 @@
 
 .ask-dataset-form {
     padding: 1rem 1.5rem;
-    overflow: scroll;
+    overflow: hidden;
     position: relative;
     width: 700px;
     background-color: rgb(248, 247, 247);
