--- a/magda-web-client/src/Components/RecordHandler.scss
+++ b/magda-web-client/src/Components/RecordHandler.scss
@@ -78,6 +78,9 @@
 
 .quality-rating-box {
     margin: 20px 0;
+    .tooltip {
+        line-height: 2rem;
+    }
 
     span {
         color: #535353;
