--- a/magda-web-client/src/Components/Search/SearchBox.scss
+++ b/magda-web-client/src/Components/Search/SearchBox.scss
@@ -69,9 +69,9 @@
     }
 
     @media (min-width: $medium) {
-        margin: 16px auto 32px auto;
-        padding: 40px 90px;
-        width: 788px;
+        margin: 0 auto 2rem auto;
+        padding: 3rem 6rem;
+        width: 48rem;
         border: 0;
         box-shadow: none;
         border-radius: 2px;
@@ -154,6 +154,7 @@
 
 .home {
     .searchBox {
+        margin: 6rem auto 6rem auto;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16),
             0px 3px 6px rgba(0, 0, 0, 0.23);
         border-radius: 4px;
