--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -203,6 +203,10 @@ h4 {
     background: #ffffff;
 }
 
+.au-skip-link__link {
+    color: $AU-color-background !important;
+}
+
 .ReactModal__Body--open div.au-grid {
     filter: blur(1.5px);
 }
