DS Header component (#1456)
* Resolves #1337 on magda-io/magda. Uses the Design System Header component, changes the main menu.

* Updated CHANGES

* Fix header bug created previous commit, where menu disappeared on desktops

* Move the menu links back to the top

--- a/magda-web-client/src/Components/Search/SearchBox.scss
+++ b/magda-web-client/src/Components/Search/SearchBox.scss
@@ -74,9 +74,9 @@
     }
 
     @media (min-width: $medium) {
-        margin: 16px auto 32px auto;
-        padding: 40px 90px;
-        width: 788px;
+        margin: 0 auto 2rem auto;
+        padding: 3rem 6rem;
+        width: 48rem;
         border: 0;
         box-shadow: none;
         border-radius: 2px;
@@ -164,6 +164,7 @@
 
 .home {
     .searchBox {
+        margin: 6rem auto 6rem auto;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16),
             0px 3px 6px rgba(0, 0, 0, 0.23);
         border-radius: 4px;
