--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -202,6 +202,14 @@ h4 {
     background: #ffffff;
 }
 
+.au-skip-link__link {
+    color: $AU-color-background !important;
+}
+
+.ReactModal__Body--open div.au-grid {
+    filter: blur(1.5px);
+}
+
 .au-page-alerts {
     h3 {
         margin: 0;
