Added  `overflow-y: scroll` to body to fix IE browser scroll bar issue Added min-height to body

--- a/magda-web-client/src/Components/Publisher/PublishersViewer.scss
+++ b/magda-web-client/src/Components/Publisher/PublishersViewer.scss
@@ -61,4 +61,10 @@
             cursor: pointer;
         }
     }
+    .org-result-page-body {
+        min-height: 650px;
+    }
+}
+body {
+    overflow-y: scroll !important;
 }
