--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -2,7 +2,9 @@
 @import "./pancake/sass/pancake.scss";
 html {
 }
-
+.au-body {
+    overflow-y: scroll;
+}
 .au-body .au-grid {
     p,
     input,
