Fixed tooltip CSS

--- a/magda-web-client/src/UI/Tooltip.scss
+++ b/magda-web-client/src/UI/Tooltip.scss
@@ -21,6 +21,7 @@
     margin-left: -77px;
     border-radius: 4px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 12px;
 
     a {
         color: #fff;
@@ -48,9 +49,10 @@
 }
 
 .tooltiptext {
-    @media screen {
-        transition: none !important;
-    }
     transition-delay: 1s;
     transition: all 1s ease;
+
+    @media screen and (hover: none) {
+        transition: none !important;
+    }
 }
