Make pagination on mobile responsive

--- a/magda-web-client/src/UI/Pagination.scss
+++ b/magda-web-client/src/UI/Pagination.scss
@@ -5,6 +5,7 @@
     .pagination-list {
         list-style: none;
         display: flex;
+        flex-flow: row wrap;
         padding-left: 0;
         justify-content: center;
         margin-bottom: 24px;
