--- a/magda-web-client/src/Components/Publisher/PublishersViewer.scss
+++ b/magda-web-client/src/Components/Publisher/PublishersViewer.scss
@@ -44,6 +44,7 @@
         text-transform: uppercase;
         margin-bottom: 8px;
         color: $AU-color-foreground-action;
+        font-weight: 500;
     }
 
     .clear-btn.au-btn.au-btn--tertiary {
