--- a/magda-web-client/src/UI/Tooltip.scss
+++ b/magda-web-client/src/UI/Tooltip.scss
@@ -19,6 +19,12 @@
     border-radius: 4px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 12px;
+    transition-delay: 1s;
+    transition: all 1s ease;
+
+    @media screen and (hover: none) {
+        transition: none !important;
+    }
 
     a {
         color: #fff;
@@ -36,15 +42,7 @@
     border-color: #222 transparent transparent transparent;
 }
 
-.tooltip:hover .tooltiptext {
+.tooltip:hover .tooltiptext,
+.tooltip-open .tooltiptext {
     visibility: visible;
-}
-
-.tooltiptext {
-    transition-delay: 1s;
-    transition: all 1s ease;
-
-    @media screen and (hover: none) {
-        transition: none !important;
-    }
 }
