Added new filter explanation.

--- a/magda-web-client/src/UI/DataQualityTooltip.scss
+++ b/magda-web-client/src/UI/DataQualityTooltip.scss
@@ -2,5 +2,8 @@
     display: inline-block;
     margin: 0;
     padding-left: 5px;
-    // vertical-align: -1px;
+}
+
+.data-quality-tooltip-inner {
+    width: 140px;
 }
